// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prettier formatting can format a basic Astro file 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Document</title>
  </head>
  <body>
    <h1>Hello world!</h1>
  </body>
</html>
"
`;

exports[`Prettier formatting can format an Astro file with embedded JSX expressions 1`] = `
"---
import Color from \\"../components/Color.jsx\\";

let title = \\"My Site\\";

const colors = [\\"red\\", \\"yellow\\", \\"blue\\"];
---

<html lang=\\"en\\">
  <head>
    <title>My site</title>
  </head>
  <body>
    <h1>{title}</h1>

    <script $ lang=\\"ts\\">
      \\"I'm some super long text and oh boy I sure do hope this formatter doesn't break me!\\";
    </script>

    <script $ lang=\\"ts\\">
      colors.map((color) => (
        <div>
          <Color name={color} />
        </div>
      ));
    </script>
  </body>
</html>
"
`;

exports[`Prettier formatting can format an Astro file with frontmatter 1`] = `
"---
import Color from \\"../components/Color.jsx\\";

let title = \\"My Site\\";

const colors = [\\"red\\", \\"yellow\\", \\"blue\\"];
---

<html lang=\\"en\\">
  <head>
    <title>My site</title>
  </head>
  <body>
    <h1>{title}</h1>
  </body>
</html>
"
`;
